[package]
name = "schack_gui"
version = "0.1.0"
authors = ["Oliver Sveijer <osveijer@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
murnion-chess = { git = "https://github.com/INDAPlus21/murnion-chess.git" }
linked-hash-map = "0.5.4" 
ggez = "0.6.1"